<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/main_test_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_world" />
	<Button
	    android:id="@+id/main_test_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/button" />
	<com.lizhiguang.testapplication.widget.FocusTextView 
	    android:id="@+id/main_lang_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:singleLine="true"
	    android:ellipsize="marquee"
	    android:focusable="true"
	    android:focusableInTouchMode="true"
		android:text="@string/long_text"/>
	<com.lizhiguang.testapplication.widget.FocusTextView 
	    android:id="@+id/main_lang_text2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:singleLine="true"
	    android:ellipsize="marquee"
	    android:focusable="true"
	    android:focusableInTouchMode="true"
		android:text="@string/long_text"/>
	<ToggleButton 
	    android:id="@+id/main_toggle_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textOn="@string/first"
	    android:textOff="@string/second"
	    android:checked="true"/>
	<ProgressBar 
	    android:id="@+id/main_progress_bar"
	    style="?android:attr/progressBarStyleHorizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:progress="50"
	    android:max="100"
	    android:secondaryProgress="70"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:id="@+id/main_button_increase"
	        android:text="@string/increase"/>
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:id="@+id/main_button_reduce"
	        android:text="@string/reduce"/>
	</LinearLayout>
	<Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/main_button_handler_test"
	        android:text="@string/handler"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:id="@+id/main_button_save"
	        android:text="@string/save"/>
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:id="@+id/main_button_get"
	        android:text="@string/get"/>
	</LinearLayout>
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_button_list_test"
        android:text="@string/list"/>

</LinearLayout>
